http://bugzilla.liquidsys.com/show_bug.cgi?id=4201 http://bugzilla.liquidsys.com/show_bug.cgi?id=4 bug: 4201. if there are more then 4 rows of all day appts, add vertical scrollbar for all day appts (appts only, headers are fixed). Yes, this is the fourth scrollable region synced with the first three. wheeee. When dragging to create a new all day appt, scroll to bottom if need be. Still need to support pressure on left/right if we need to horizontally scroll while drag creating an allday appt.
Copied from Perforce
 Change: 14818

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -739,6 +739,18 @@ td.DDSepInvisible div {background-color:transparent;width:1px;overflow:hidden;}
 	overflow: auto;
 }
 
+.calendar_allday_appt_vert {
+	position:absolute;
+  	overflow:-moz-scrollbars-vertical;
+  	overflow-x:hidden;
+  	overflow-y:auto;
+}
+
+.calendar_allday_appt {
+	position:absolute;
+	overflow: hidden;
+}
+
 .calendar_month_body {
 	position:relative;
 	overflow:hidden;
